# veil

./: Cargo.toml
veil-client/: Cargo.toml
veil-client/src/: cli.rs  listener.rs  main.rs  messaging.rs  persistence.rs  state.rs  types.rs
veil-protocol/: Cargo.toml
veil-protocol/src/: lib.rs
veil-server/: Cargo.toml
veil-server/src/: main.rs
