[package]
name = "veil-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
constcat = "0.6"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
url = "2.5"
vodozemac = "0.9"
veil-protocol = { path = "../veil-protocol" }
tungstenite = "0.27"
reqwest = "0.12"
once_cell = "1"
rkyv = { version = "0.8", features = ["std", "alloc"] }
zstd = "0.1"
x25519-dalek = { version = "2", features = ["getrandom"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
