[package]
name = "veil-server"
version = "0.1.0"
edition = "2024"

[dependencies]
veil-protocol = { path = "../veil-protocol" }
rkyv = { version = "0.8", features = ["bytecheck", "alloc"] }
rkyv_derive = "0.8"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
itertools = "0.14"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
vodozemac = "0.9"
